fix email contrast

--- a/src/App.css
+++ b/src/App.css
@@ -462,7 +462,7 @@ header .scroll-icon span {
 }
 
 .contact-email a {
-  color: #0084ff;
+  color: #66b5ff;
 }
 
 .contact h2,
